--- a/www/index.html
+++ b/www/index.html
@@ -161,7 +161,7 @@
         $('#btnA').prop('disabled', false);
         $('#btnB').prop('disabled', false);
         $('#btnC').prop('disabled', false);
-        
+        btnCClick(null);
     }
 
     // Alarmの処理
