--- a/www/index.html
+++ b/www/index.html
@@ -153,6 +153,8 @@
     var active = false;
     var startTime = 0;
     var period = 0;
+    var m = 0;
+    var s = 0;
 
 
     
@@ -213,8 +215,10 @@
         if(active) {
           var time = parseInt((new Date() - startTime)/1000);
           var rest = period - time;
+          m = parseInt(rest/60);
+          s = parseInt(rest - m*60);
           $("#time").html("経過時間：" + time);
-          $("#remain").html("残り時間： "+ rest);
+          $("#remain").html("残り時間： "+ m + "分" + s + "秒");
           analog(rest);
           
         }
