--- a/www/index.html
+++ b/www/index.html
@@ -217,7 +217,7 @@
           var rest = period - time;
           m = parseInt(rest/60);
           s = parseInt(rest - m*60);
-          $("#time").html("経過時間：" + time);
+          $("#time").html("経過時間：" + time + 秒);
           $("#remain").html("残り時間： "+ m + "分" + s + "秒");
           analog(rest);
           
@@ -239,7 +239,7 @@
 
     <div id="remain">Remaining time</div>
     <div id="time">Time</div>
-    <button id="btnA">ButtonA</button>  
+    <button id="btnA">Start</button>  
     <button id="btnB">ButtonB</button>  
     <button id="btnC">ButtonC</button>  
     <input type="number" id="minute" value=3 >
