--- a/www/index.html
+++ b/www/index.html
@@ -217,10 +217,9 @@
           var rest = period - time;
           m = parseInt(rest/60);
           s = parseInt(rest - m*60);
-          $("#time").html("経過時間：" + time + 秒);
-          $("#remain").html("残り時間： "+ m + "分" + s + "秒");
+          $("#time").html("経過時間：" + time + "秒");
+          $("#remain").html("残り時間： " + m + "分" + s + "秒");
           analog(rest);
-          
         }
         if(rest <= 0) {
           active = false;
@@ -240,9 +239,9 @@
     <div id="remain">Remaining time</div>
     <div id="time">Time</div>
     <button id="btnA">Start</button>  
-    <button id="btnB">Stop</button>  
+    <button id="btnB">Stop</button> 
     <button id="btnC">Set</button>  
-    <input type="number" id="minute" value=3 >
-    <input type="number" id="second" value=0 >
+    <input type="number" id="minute" value=0 >
+    <input type="number" id="second" value=15 >
 </body>
 </html>
