セットをしても音が鳴らないようにした

--- a/www/index.html
+++ b/www/index.html
@@ -199,7 +199,7 @@
 
     // ButtonCがクリックされた時の処理
     function btnCClick(e){
-        alarm();
+        //alarm();
         active = false;
         period = 60 * parseInt($("#minute").val()) + parseInt($("#second").val());
         $("#time").html("経過時間： 0");
@@ -221,7 +221,7 @@
           $("#remain").html("残り時間： " + m + "分" + s + "秒");
           analog(rest);
         }
-        if(rest <= 0) {
+        if(rest <= 0) {;
           active = false;
           alarm();
         }
