--- a/www/index.html
+++ b/www/index.html
@@ -221,8 +221,13 @@
           $("#remain").html("残り時間： " + m + "分" + s + "秒");
           analog(rest);
         }
-        if(rest <= 0) {;
+        if(rest <= 0) {
           active = false;
+          period = 60 * parseInt($("#minute").val()) + parseInt($("#second").val());
+          $("#time").html("経過時間： 0");
+          $("#remain").html("残り時間：" + period);
+          $("#btnA").prop("disabled",false);
+          $("#btnB").prop("disabled",true);
           alarm();
         }
         
