--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,9 @@
         $('#btnD').click(function(e) {
             btnDClick(e);
         });
+        $('#btnE').click(function(e) {
+            btnEClick(e);
+        });
         init();
     });
     
@@ -171,6 +174,7 @@
         $('#btnB').prop('disabled', false);
         $('#btnC').prop('disabled', false);
         $('#btnD').prop('disabled', false);
+        $('#btnE').prop('disabled', false);
         btnCClick(null);
     }
 
@@ -235,6 +239,14 @@
         count--;
       }
     }
+
+    function btnEClick(e){
+      //<input type="number" id="minute" value=0 >
+      //(#"minute").value = 0;
+      //$("#minute").value = 0;
+      document.getElementById( "minute" ).value = 0 ;
+      document.getElementById( "second" ).value = 0 ;
+    }
     
  
     // 繰り返し実行する処理
@@ -285,6 +297,7 @@
     <button id="btnB">Stop</button> 
     <button id="btnC">Set</button>  
     <button id="btnD">3分</button>
+    <button id="btnE">reset</button>
     <input type="number" id="minute" value=0 >
     <input type="number" id="second" value=15 >
 </body>
