input numberが０より小さくならないようにした

--- a/www/index.html
+++ b/www/index.html
@@ -329,7 +329,7 @@
     <button id="btnE">reset</button>
     <button id="btnF">5分</button>
     <button id="btnG">１０分</button>
-    <input type="number" id="minute" value=0 >
-    <input type="number" id="second" value=15 >
+    <input type="number" id="minute" value=0 min = 0>
+    <input type="number" id="second" value=15 min = 0>
 </body>
 </html>
