--- a/www/index.html
+++ b/www/index.html
@@ -330,6 +330,6 @@
     <button id="btnF">5分</button>
     <button id="btnG">１０分</button>
     <input type="number" id="minute" value=0 min = 0>
-    <input type="number" id="second" value=15 min = 0>
+    <input type="number" id="second" value=15 min = 0 max= 59>
 </body>
 </html>
