setしたとき、３分,５，１０ボタンを押したとき残り時間の表示が分と秒になるようにした

--- a/www/index.html
+++ b/www/index.html
@@ -225,8 +225,10 @@
         //alarm();
         active = false;
         period = 60 * parseInt($("#minute").val()) + parseInt($("#second").val());
-        $("#time").html("経過時間： 0");
-        $("#remain").html("残り時間：" + period);
+        m = parseInt(period/60);
+        s = parseInt(period - m*60);
+        $("#time").html("経過時間： 0秒");
+        $("#remain").html("残り時間：" + m + "分" + s + "秒");
         $("#btnA").prop("disabled",false);
         $("#btnB").prop("disabled",true);
         if(count == 1) {
@@ -239,8 +241,10 @@
       //alarm();
       active = false;
       period = 60 * 3;
+      m = parseInt(period/60);
+      s = parseInt(period - m*60);
       $("#time").html("経過時間： 0");
-      $("#remain").html("残り時間：" + period);
+      $("#remain").html("残り時間：" + m + "分" + s + "秒");
       $("#btnA").prop("disabled",false);
       $("#btnB").prop("disabled",true);
       if(count == 1) {
@@ -256,8 +260,10 @@
       //alarm();
       active = false;
       period = 60 * 5;
+      m = parseInt(period/60);
+      s = parseInt(period - m*60);
       $("#time").html("経過時間： 0");
-      $("#remain").html("残り時間：" + period);
+      $("#remain").html("残り時間：" + m + "分" + s + "秒");
       $("#btnA").prop("disabled",false);
       $("#btnB").prop("disabled",true);
       if(count == 1) {
@@ -268,8 +274,10 @@
       //alarm();
       active = false;
       period = 60 * 10;
+      m = parseInt(period/60);
+      s = parseInt(period - m*60);
       $("#time").html("経過時間： 0");
-      $("#remain").html("残り時間：" + period);
+      $("#remain").html("残り時間：" + m + "分" + s + "秒");
       $("#btnA").prop("disabled",false);
       $("#btnB").prop("disabled",true);
       if(count == 1) {
