経過時間に秒がついていなかったのでつけた

--- a/www/index.html
+++ b/www/index.html
@@ -243,7 +243,7 @@
       period = 60 * 3;
       m = parseInt(period/60);
       s = parseInt(period - m*60);
-      $("#time").html("経過時間： 0");
+      $("#time").html("経過時間： 0秒");
       $("#remain").html("残り時間：" + m + "分" + s + "秒");
       $("#btnA").prop("disabled",false);
       $("#btnB").prop("disabled",true);
@@ -262,7 +262,7 @@
       period = 60 * 5;
       m = parseInt(period/60);
       s = parseInt(period - m*60);
-      $("#time").html("経過時間： 0");
+      $("#time").html("経過時間： 0秒");
       $("#remain").html("残り時間：" + m + "分" + s + "秒");
       $("#btnA").prop("disabled",false);
       $("#btnB").prop("disabled",true);
@@ -276,7 +276,7 @@
       period = 60 * 10;
       m = parseInt(period/60);
       s = parseInt(period - m*60);
-      $("#time").html("経過時間： 0");
+      $("#time").html("経過時間： 0秒");
       $("#remain").html("残り時間：" + m + "分" + s + "秒");
       $("#btnA").prop("disabled",false);
       $("#btnB").prop("disabled",true);
